[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridian-edge-mcp"
version = "0.1.0"
description = "Meridian Edge MCP server — prediction market consensus data for AI assistants"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Meridian Edge", email = "support@meridianedge.io" }
]
keywords = [
  "mcp", "model-context-protocol", "prediction-markets",
  "forecasting", "consensus", "sports", "claude"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://meridianedge.io"
Documentation = "https://meridianedge.io/docs.html"
Repository = "https://github.com/meridian-edge/meridian-edge-mcp"
"Get API Key" = "https://meridianedge.io"

[project.scripts]
meridian-edge-mcp = "meridian_edge_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["meridian_edge_mcp"]
